# code-prototyping

./: README.md
probability_distribution/: CMakeLists.txt
probability_distribution/exe/: test_probability_distribution.cpp
probability_distribution/include/: probability_distribution.h
probability_distribution/src/: CMakeLists.txt  probability_distribution.cpp
truncated_normal/: CMakeLists.txt  Makefile  truncated_normal_result.qti
truncated_normal/exe/: CMakeLists.txt  test_truncated_normal.cpp
truncated_normal/include/: cdf_truncated_normal.h  pdf_truncated_normal.h
truncated_normal/src/: CMakeLists.txt  cdf_truncated_normal.cpp  pdf_truncated_normal.cpp
unsigned_normal/: unsigned_gaussian_result.qti
unsigned_normal/exe/: CMakeLists.txt  test_unsigned_normal.cpp
unsigned_normal/include/: cdf_unsigned_normal.h  pdf_unsigned_normal.h
unsigned_normal/src/: CMakeLists.txt  cdf_unsigned_normal.cpp  pdf_unsigned_normal.cpp
von_mises/: CMakeLists.txt  Makefile  von_mises_cdf_analysis.qti  von_mises_result.qti
von_mises/exe/: CMakeLists.txt  test_von_mises.cpp
von_mises/include/: CMakeLists.txt  cdf_von_mises.h  cdf_wrapped_normal.h  pdf_von_mises.h  pdf_wrapped_normal.h
von_mises/src/: CMakeLists.txt  cdf_von_mises.cpp  cdf_wrapped_normal.cpp  pdf_von_mises.cpp  pdf_wrapped_normal.cpp
von_mises/tests/: CMakeLists.txt  test_von_mises.cpp
